--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ dist
 dist-ssr
 *.local
 
+# Raw data sources for the data pipeline
+raw_data/
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
