--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@fortawesome/free-solid-svg-icons": "^7.0.1",
     "@fortawesome/react-fontawesome": "^3.0.2",
     "busboy": "^1.6.0",
+    "i18next": "^25.5.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-i18next": "^15.7.3"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.13",
