--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@vitejs/plugin-react": "^5.0.2",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.5.3",
-    "vite": "^7.1.4"
+    "vite": "^7.1.4",
+    "vite-plugin-pwa": "^1.0.3"
   }
 }
